# handwritten

./: svelte.config.js
editor/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  wrangler.toml
editor/src/: app.html
editor/src/lib/: firebase.client.ts  firebase.server.ts  stripe.client.ts
editor/src/lib/layout/: HeaderIcon.svelte  HomeSidebar.svelte  Navbar.svelte
editor/src/lib/schemas/: auth.ts  project-file.ts  project.ts
editor/src/lib/service/: project-list.ts  project.ts  upload.ts
editor/src/lib/store/: image-editor.ts  project-list.ts  project.ts  session.ts  upload.ts
editor/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  styles.css  worker.js
editor/src/routes/(editor)/: +layout.svelte
editor/src/routes/(normal)/: +layout.svelte
editor/src/routes/auth/: +layout.svelte
editor/src/routes/components/: DocumentIcon.svelte
editor/src/routes/project/: +layout.svelte
firebase/: .firebaserc  firebase.json
firebase/functions/: package-lock.json  package.json  tsconfig.json
firebase/functions/src/: index.ts  ocr.ts  project.ts  schemas.ts
landing-page/: Dockerfile  README.md  components.json  package-lock.json  package.json  tailwind.config.js
landing-page/src/: app.html
landing-page/src/routes/: +error.svelte  +layout.svelte  +page.svelte
services/scanner-service/: .dockerignore  Dockerfile  logconfig.yml  main.py  pyproject.toml
services/scanner-service/scanner_service/: base.py  transform.py
src/lib/navbar/: Navbar.svelte
src/routes/: +page.svelte
(+85 files in other folders)
