[tool.poetry]
name = "scanner-service"
version = "0.1.0"
description = ""
authors = ["Henry Jiang <h243jian@uwaterloo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
opencv-python-headless = "^4.9.0.80"
sympy = "^1.12"
scipy = "^1.12.0"
scikit-image = "^0.22.0"
python-multipart = "^0.0.9"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
